DEV - fixed letter spacing and uppercase for footer headings

--- a/web/app/themes/adopted/assets/sass/styles/global.sass
+++ b/web/app/themes/adopted/assets/sass/styles/global.sass
@@ -15,7 +15,8 @@ body
 
 	h1, h2, h3, h4, h5, h6
 		font-family: atrament-web, sans-serif
-		letter-spacing: $tiny
+		letter-spacing: 2px
+		text-transform: uppercase
 
 	h1, h4
 		color: navy()
